2010-06-22 Doug Simons <doug.simons@testplant.com>

	* Source/NSButton.m:
	* Source/NSMatrix.m:
	* Source/NSMenu.m:
	Further change to performKeyEquivalent: methods to take Shift key
	into account for control keys (such as Return and Tab) as well as
	function keys, and to honor keyEquivalentModifierMask for cells in
	a matrix that implement that method. Also, ignore key events with
	zero length (such as the Windows key) which was previously triggering
	actions on objects with no keyEquivalent.

2010-06-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPopUpButtonCell.m (-initTextCell:pullsDown:, -initWithCoder:,
	-_currentArrowImage:, -attachPopUpWithFrame:inView:): Swap meaning
	of NSMinYEdge and NSMaxYEdge to match their use in Cocoa. Recall
	that pop up buttons use flipped geometry.

2010-06-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenuView.m (-rectOfItemAtIndex:,
	-setWindowFrameForAttachingToRect:onScreen:preferredEdge:...):
	* Source/NSPopUpButtonCell.m (-attachPopUpWithFrame:inView:):
	Don't display the first item of a pull down menu, which holds its
	title, and fix the attachment of pull down menus to their button.

	* Source/NSPopUpButtonCell.m (-title:): Implement to return the
	title of the menu.
	* Source/NSPopUpButtonCell.m (-setTitle): Fix implementation to
	actually change the title of a pull down menu.

	* Source/NSPopUpButtonCell.m (-selectItem:): Prevent exception
	when a horizontal menu does not have a selected item.

2010-06-21  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSSliderCell.m (-closestTickMarkValueToValue:,
	-rectOfTickMarkAtIndex:, -tickMarkValueAtIndex:): Fix tick mark
	related calculations to correctly take into account that the first
	and last tick marks conincide with the minimum and maximum values.

2010-06-18  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSAttributedString.m
	(-initWithData:options:documentAttributes:error:): Attempt to auto